// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alignStyles > should return properly 1`] = `
{
  "textAlign": "center",
}
`;

exports[`baseStyles > should return properly 1`] = `
{
  "boxSizing": "border-box",
  "fontFamily": "inherit",
}
`;

exports[`borderStyles > should return properly for "%p" all 1`] = `
{
  "border": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly for "%p" end 1`] = `
{
  "borderInlineEnd": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly for "%p" horizontal 1`] = `
{
  "borderBottom": "1px solid #e6e6e6",
  "borderTop": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly for "%p" left 1`] = `
{
  "borderLeft": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly for "%p" start 1`] = `
{
  "borderInlineStart": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly for "%p" true 1`] = `
{
  "border": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly for "%p" vertical 1`] = `
{
  "borderLeft": "1px solid #e6e6e6",
  "borderRight": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly with an array 1`] = `
{
  "borderLeft": "4px solid #cdcdfe",
  "borderTop": "1px solid #e6e6e6",
}
`;

exports[`boxStyles > should return properly 1`] = `
{
  "map": undefined,
  "name": "1dn1kmt",
  "next": undefined,
  "styles": "
    box-sizing:border-box;font-family:inherit;;
    background-color:#3030e8;color:#ffffff;;
    ;
    ;
    ;
    ;
    ;
    ;
    ;
    ;
    box-shadow:2px 4px 16px 4px rgba(148, 148, 148, 0.24);;
  ",
  "toString": [Function],
}
`;

exports[`colorStyles > should return properly with "background" and "color" 1`] = `
{
  "backgroundColor": "#3030e8",
  "border": "1px solid #3030e8",
  "color": "#d3f8d7",
}
`;

exports[`colorStyles > should return properly with just "color" 1`] = `
{
  "color": "#ff6666",
}
`;

exports[`dimensionStyles > should return properly 1`] = `
{
  "height": "200px",
  "maxWidth": "100%",
  "width": "480px",
}
`;

exports[`displayStyles > should return properly 1`] = `
{
  "display": "flex",
}
`;

exports[`flexBoxStyles > should return properly 1`] = `
{
  "alignContent": undefined,
  "alignItems": "center",
  "flexDirection": "column",
  "flexWrap": "wrap",
  "gap": "20px",
  "justifyContent": undefined,
  "justifyItems": undefined,
}
`;

exports[`flexItemStyles > should return properly 1`] = `
{
  "alignSelf": "center",
  "flex": "1 1",
  "flexBasis": undefined,
  "height": "100%",
  "justifySelf": undefined,
  "order": undefined,
  "width": "100%",
}
`;

exports[`flexItemStyles > should return properly with flex object 1`] = `
{
  "alignSelf": "center",
  "flexBasis": undefined,
  "flexGrow": 1,
  "flexShrink": 1,
  "height": "100%",
  "justifySelf": undefined,
  "order": undefined,
  "width": "100%",
}
`;

exports[`flexItemStyles > should return properly with flex string 1`] = `
{
  "alignSelf": "center",
  "flex": "1 0",
  "flexBasis": undefined,
  "height": "100%",
  "justifySelf": undefined,
  "order": undefined,
  "width": "100%",
}
`;

exports[`getContainerStyles > should return properly 1`] = `
"
    padding-left: 16px;
    padding-right: 16px;

    

    @media screen and (min-width: 1024px){padding-left:32px;padding-right:32px;};

    
  "
`;

exports[`getContainerStyles > should return properly with "responsive: false" 1`] = `
"
    padding-left: 16px;
    padding-right: 16px;

    

    

    
  "
`;

exports[`getContainerStyles > should return properly with "verticalPadding: true" 1`] = `
"
    padding-left: 16px;
    padding-right: 16px;

    
      padding-bottom: 16px;
      padding-top: 16px;
    ;

    @media screen and (min-width: 1024px){padding-left:32px;padding-right:32px;};

    @media screen and (min-width: 1024px){padding-bottom:32px;padding-top:32px;};
  "
`;

exports[`getDisableStyles > should return properly 1`] = `
"
    background-color: #f7f7f7;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
  "
`;

exports[`getDisableStyles > should return properly with "hasPlaceholder: true" 1`] = `
"
    background-color: #f7f7f7;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
      &::placeholder {
        color: #b3b3b3;
      }
    ;
  "
`;

exports[`getDisableStyles > should return properly with "isButton: true" 1`] = `
"
    background-color: #f7f7f7;
    border-color: #e6e6e6;
    color: #808080;
    cursor: not-allowed;

    
  "
`;

exports[`inputStyles > should return custom styles for "input" 1`] = `
"
    color: #101010;
    display: block;
    font-family: inherit;
    font-size: 16px;
    height: 48px;
    line-height: 1.4;
    padding: 16px 0 16px 40px;
    width: 100%;
    
        background-color: transparent;
        border: 0;
        border-bottom: 1px solid #808080;
      ;

    &:focus {
      box-shadow: 0 3px 0 0 rgba(48,48,232,0.5);
      
      outline: none;
    }

    &:disabled {
      
    background-color: ;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
      &::placeholder {
        color: #b3b3b3;
      }
    ;
  ;
    }

    
      &::placeholder {
        color: #808080;
      }

      &:not(:placeholder-shown) {
        border-color: #3030e8;
      }

      &:read-only {
        
    background-color: ;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
      &::placeholder {
        color: #b3b3b3;
      }
    ;
  ;
      }
    ;
  "
`;

exports[`inputStyles > should return the default styles for "select" 1`] = `
"
    color: #101010;
    display: block;
    font-family: inherit;
    font-size: 16px;
    height: 40px;
    line-height: 1.4;
    padding: 8px 24px 8px 16px;
    width: 100%;
    
        background-color: #fff;
        border: 1px solid #808080;
        border-radius: 8px;
      ;

    &:focus {
      
      box-shadow:0 0 0 3px rgba(48,48,232,0.6);outline:none;z-index:10;
      outline: none;
    }

    &:disabled {
      
    background-color: #f7f7f7;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
      &::placeholder {
        color: #b3b3b3;
      }
    ;
  ;
    }

    
  "
`;

exports[`inputStyles > should return the default styles for "textarea" 1`] = `
"
    color: #101010;
    display: block;
    font-family: inherit;
    font-size: 16px;
    height: ;
    line-height: 1.4;
    padding: 8px 40px 8px 16px;
    width: 100%;
    
        background-color: #fff;
        border: 1px solid #808080;
        border-radius: 8px;
      ;

    &:focus {
      
      box-shadow:0 0 0 3px rgba(48,48,232,0.6);outline:none;z-index:10;
      outline: none;
    }

    &:disabled {
      
    background-color: #f7f7f7;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
      &::placeholder {
        color: #b3b3b3;
      }
    ;
  ;
    }

    
      &::placeholder {
        color: #808080;
      }

      &:not(:placeholder-shown) {
        border-color: #3030e8;
      }

      &:read-only {
        
    background-color: #f7f7f7;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
      &::placeholder {
        color: #b3b3b3;
      }
    ;
  ;
      }
    ;
  "
`;

exports[`layoutStyles > should return properly 1`] = `
{
  "display": "flex",
  "height": "100px",
  "maxHeight": "80px",
  "maxWidth": "80px",
  "minHeight": "20px",
  "minWidth": "20px",
  "opacity": 1,
  "pointerEvents": "none",
  "transition": "all 0.2s",
  "width": "100px",
}
`;

exports[`marginStyles > should return properly 1`] = `
{
  "margin": "16px",
  "marginBottom": "8px",
  "marginLeft": "auto",
  "marginRight": "auto",
  "marginTop": "8px",
}
`;

exports[`marginStyles > should return properly for side values 1`] = `
{
  "marginBottom": "24px",
  "marginLeft": "auto",
  "marginRight": "auto",
  "marginTop": "32px",
}
`;

exports[`paddingStyles > should return properly 1`] = `
{
  "padding": "16px",
  "paddingBottom": "8px",
  "paddingLeft": "24px",
  "paddingRight": "24px",
  "paddingTop": "8px",
}
`;

exports[`paddingStyles > should return properly for side values 1`] = `
{
  "paddingBottom": "24px !important",
  "paddingLeft": "8px !important",
  "paddingRight": "12px !important",
  "paddingTop": "32px !important",
}
`;

exports[`positioningStyles > should return properly 1`] = `
{
  "bottom": "0px",
  "left": "0px",
  "position": "absolute",
  "right": "0px",
  "top": "0px",
}
`;

exports[`radiusStyles > should return properly with a string 1`] = `
{
  "borderRadius": "4px",
}
`;

exports[`radiusStyles > should return properly with an object 1`] = `
{
  "borderBottomLeftRadius": "16px",
  "borderBottomRightRadius": "8px",
  "borderTopLeftRadius": "16px",
  "borderTopRightRadius": "24px",
}
`;

exports[`shadowStyles > should return properly for "'box-shadow (dark)'" 1`] = `
{
  "boxShadow": "2px 4px 16px 4px rgba(222, 222, 222, 0.24)",
}
`;

exports[`shadowStyles > should return properly for "'box-shadow (light)'" 1`] = `
{
  "boxShadow": "2px 4px 16px 2px rgba(148, 148, 148, 0.16)",
}
`;

exports[`shadowStyles > should return properly for "'filter (dark)'" 1`] = `
{
  "filter": "drop-shadow(2px 4px 18px rgba(222, 222, 222, 0.8))",
}
`;

exports[`shadowStyles > should return properly for "'filter (light)'" 1`] = `
{
  "filter": "drop-shadow(2px 4px 8px rgba(222, 222, 222, 0.4))",
}
`;

exports[`textStyles > should return properly 1`] = `
{
  "fontSize": "14px",
  "fontStyle": "italic",
  "fontWeight": 700,
  "lineHeight": 1.2,
  "textTransform": "uppercase",
}
`;
